# QC_lattice_H

./: .gitignore  Ansaetze.py  CITATION.cff  Fidelity_func.py  HC_Lattice.py  Hamiltonian_QED.py  Hamiltonian_QED_class.py  Hamiltonian_QED_oprt.py  Hamiltonian_QED_sym.py  Hamiltonianqed.py  LICENSE  Observables.py  README.md  __init__.py  class_H_test.ipynb  pyproject.toml  test_HC_Lattice.py  test_Hamiltonian_QED_oprt.py
notebooks/: Ansaetze.py  Hamiltonian_QED_sym.py  ansaetze_noise.ipynb  ansaetze_test.ipynb  class_HC_lattice_test.ipynb  class_H_QED_test.ipynb  class_H_QED_test_sym_oprt.ipynb  class_H_test.ipynb  class_ansaetze.ipynb  qclatticeh_vqe_example.ipynb
notebooks/Qedma/: 2D_2x2mbasisFalse_puregaugeTrue_g0.8452_pbcTrue_l1_factE1_factB1_m0_Omega0_itr2000_entangfull_optimizerSLSQP.pkl  2D_2x2mbasisFalse_puregaugeTrue_g0.8452_pbcTrue_l1_factE1_factB1_m0_Omega0_itr2000_entangtriangular_optimizerSLSQP.pkl  qedma_test.ipynb  step_scaling_match1.4_vqe_results_noisel1_purpleNFTCOBYLA.txt  step_scaling_noise.ipynb
notebooks/Quantinuum/: README.md  handles_emulator_g2-1.1_1024shots.pkl  quantinuum_staticcharges_test.ipynb  results_rndpoint.txt  results_vacpoint.txt  static_potential_3x2_m2_omega1_l1.txt  static_potential_3x2_m2_omega1_l1_mutualinfoansatz.txt  static_potential_3x2_m2_omega1_l1_mutualinfoansatz_v2.txt  static_potential_fermions.ipynb  static_potential_fermions_pytket.ipynb  static_potential_fermions_runs.ipynb
qclatticeh/: README.md  __init__.py  old__init__.py
qclatticeh/circuits/: Ansaetze.py  __init__.py
qclatticeh/hamiltonian/: Hamiltonian_QED_oprt.py  Hamiltonian_QED_sym.py  __init__.py
qclatticeh/lattice/: HC_Lattice.py  __init__.py
